# Lego-Gazebo

./: .gitignore  README.md
catkin_ws/lego_gazebo/launch/: lego.launch  lego_camera.launch  lego_touch.launch
catkin_ws/lego_gazebo/worlds/: lego_camera.world  lego_gyro.world  lego_touch.world
catkin_ws/src/lego_gazebo/: CMakeLists.txt  package.xml
catkin_ws/src/lego_gazebo/launch/: lego_gyro1.launch  lego_sonar1.launch
catkin_ws/src/lego_gazebo/worlds/: lego.world  lego_camera.world  lego_sonar.world  lego_touch.world
models/boundaries/: model.config  model.sdf
models/lego_mindstorm/: model.config  model.sdf
models/lego_mindstorm/meshes/: model.dae  wheel.dae
models/lego_mindstorm/plugins/: CMakeLists.txt  wheel_plugin.cpp  wheel_plugin.h
models/lego_mindstorm_camera/: model.config  model.sdf
models/lego_mindstorm_gyro/: model.config  model.sdf
models/lego_mindstorm_sonar/: model.sdf
models/lego_mindstorm_touch/: model.config  model.sdf
models/lego_mindstorm_touch/meshes/: body.dae  caster.dae
models/lego_model/: model.sdf
models/my_coke_can/: model.config  model.sdf
plugins/: gyro_plugin.cpp  gyro_plugin.h  touch_plugin.cpp  touch_plugin.h
python_scripts/: color.py  gyro.py  joonejargija.py  motor.py  sonar.py  touch.py
python_scripts/ev3dev/: core.py  gazcolor.py  gazmedmotor.py  gaztouch.py
python_scripts/ev3devmocka/: core.py  gazcolor.py  gazgyro.py  gazmotor.py  gazsonar.py
python_scripts/example_scripts/: listener.py  talker.py
shell_scripts/: robot_test  script_launch  script_launch.sh
(+1 files in other folders)
